--- a/css/result.css
+++ b/css/result.css
@@ -66,9 +66,9 @@ body {
 
 }
 
-.tabela {
-    margin-top: 5%;
-}
+
+
+
 
 .yellowButton {
     color: #fff;
@@ -122,7 +122,10 @@ body {
 
 }
 
-
+table {
+    margin-top: 5%;
+    width: 100%;
+}
 
 table,
 th,
@@ -215,4 +218,114 @@ dialog {
     margin-top: 10%;
 }
 
+/*responsividade*/
 
+@media (min-width: 930px) and (max-width: 1080px) {
+    .tabela {
+        height: 40%;
+        width: 100%;
+    }
+}
+
+@media (min-width: 304px) and (max-width: 930px) {
+
+.tabela {
+    height: 60%;
+    width: 100%;
+}
+
+table,
+th,
+td {
+    border-collapse: collapse;
+    padding: 1px;
+    text-align: left;
+    color: #003785;
+    font-size: 20px;
+}
+
+
+}
+
+@media (min-height: 500px) and (max-height: 900px) {
+    .tabela {
+        height: 40%;
+        width: 100%;
+    }
+    
+    table,
+    th,
+    td {
+        border-collapse: collapse;
+        padding: 1px;
+        text-align: left;
+        color: #003785;
+        font-size: 10px;
+    }
+
+    .bottom {
+        margin-top: 5px;
+    }
+    
+.help a {
+    margin-top: 4px;
+}
+
+.verificarContent {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    border-radius: 7px;
+   
+  
+    gap: 5px;
+    border: 1px solid #003785;
+    height: 100vh;
+    width: 80vh;
+
+
+}
+}
+
+
+@media (min-height: 300px) and (max-height: 500px) {
+    .tabela {
+        height: 50%;
+        width: 100%;
+    }
+    
+    table,
+    th,
+    td {
+        border-collapse: collapse;
+        padding: 1px;
+        text-align: left;
+        color: #003785;
+        font-size: 6px;
+    }
+
+    .bottom {
+        margin-top: 2px;
+        height: 40px;
+        width: 40px;
+    }
+    
+.help a {
+    margin-top: 2px;
+}
+
+.verificarContent {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    border-radius: 7px;
+    gap: 1px;
+    border: 1px solid #003785;
+    height: 100vh;
+    width: 100vh;
+
+}
+ 
+
+
+}
