--- a/css/funcVerific.css
+++ b/css/funcVerific.css
@@ -233,3 +233,49 @@ dialog {
     opacity: 1;
     pointer-events: all;
 }
+
+@media  (min-height: 900px) {
+
+
+    .bottom {
+        margin-top: 75%;
+    }
+    
+}
+
+
+@media (min-height: 400px) and (max-height: 855px) {
+
+
+    .bottom {
+        margin-top: 40%;
+    }
+    
+    .idInput input {
+        width: 100px;
+    }
+
+    .idInput label {
+        margin-bottom: 4%;
+    }
+
+    .idInput a {
+        margin-bottom: 4%;
+    }
+
+    .verifClass  {
+        margin-bottom: 4%;
+    }
+
+   .idInput {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+   }
+
+   #logo {
+    width:300px;
+    height: 150px;
+   }
+}
