--- a/css/result.css
+++ b/css/result.css
@@ -241,8 +241,25 @@ td {
     padding: 1px;
     text-align: left;
     color: #003785;
-    font-size: 20px;
+    font-size: 10px;
 }
+
+.verificarContent {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    border-radius: 7px;
+    padding: 40px;
+    box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
+    gap: 5px;
+    border: 1px solid #003785;
+    height: 80vh;
+    width: 100%;
+
+
+}
+
+
 
 
 }
@@ -263,6 +280,7 @@ td {
         font-size: 20px;
     }
 
+
     .bottom {
         margin-top: 5px;
     }
@@ -280,7 +298,7 @@ td {
   
     gap: 5px;
     border: 1px solid #003785;
-    height: 100vh;
+    height: 80vh;
     width: 80vh;
 
 
