--- a/css/funcVerific.css
+++ b/css/funcVerific.css
@@ -234,6 +234,8 @@ dialog {
     pointer-events: all;
 }
 
+
+
 @media  (min-height: 900px) {
 
 
@@ -245,6 +247,20 @@ dialog {
 
 
 @media (min-height: 400px) and (max-height: 855px) {
+    dialog {
+        position: fixed;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 60%;
+        height: 50%;
+        max-width: 90%;
+        background-color: #fff;
+        padding: 1.2rem;
+        border-radius: 0.5rem;
+        z-index: 10;
+        border: 0px;
+    }
 
 
     .bottom {
