--- a/css/verificar.css
+++ b/css/verificar.css
@@ -1,150 +1,126 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 body {
-    font-family: 'Inter', sans-serif;
     margin: 0;
-    padding: 0;
-    color: #023047
+    font-family: Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
-.page {
+.main-content {
+    width: 20%;
+    height: 75%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    align-content: center;
     justify-content: center;
-    width: 100%;
-    height: 100vh;
-    background-color: #f6f6f7;
-}
-
-.verificarContent {
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    border-radius: 7px;
-    padding: 40px;
     box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
     gap: 5px;
     border: 1px solid #003785;
-    height: 80vh;
-    width: 50vh;
+    border-radius: 7px;
+    padding: 40px;
+}
+
+
+
+.help,
+.exit {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.content {
+   display: flex;
+   align-items: center;
+   flex-direction: column;
+   margin-bottom: 80%;
    
     
 }
 
-.verificarContent input {
-    padding: 15px;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    margin-bottom: 20px;
-    margin-top: 5px;
-    transition: all linear 160ms;
-    outline: none;
-    border-radius: 25px;
-    width: 150px;
-}
+.top-content {
 
-.verificarContent input:focus {
-    border: 1px solid #2196F3;
-}
-
-.verificarContent #verificador{
-    background-color: #01CA94;
-    color: #fff;
-    font-size: 14px;
-    font-weight: 600;
-    border: none !important;
-    transition: all linear 160ms;
-    cursor: pointer;
-    margin: 0 !important;
-    height: 45px;
-    width: 100px;
-    border-radius: 25px;
-}
-
-.verificarContent #verificador:hover {
-    transform: scale(1.05);
-    background-color:#003785;
-}
-
-.verificarContent  {
-    color: #fff;
-}
-
-
-.help  {
+    width: 100%;
     display: flex;
-    align-items: center; 
-    justify-content: center;
+    justify-content:center;
+    
 }
 
-.help a {
-    margin-top: 4%;
+.inserirId {
+    display: flex;
+    align-items: center;
+    width: 60%;
+    
+}
+.inserirId button {
+    margin-left: 15px;
+    background-color: #01CA94;
+    border-radius: 25px;
+    height: 40px;
+    width: 100px;
+    color: #fff;
+    font-size: 15px;
+    border: 1px solid #003785;
+}
+
+.inserirId button:hover {
+    transform: scale(1.05);
+  background-color: #003785;
+  color: #fff;
+  cursor: pointer;
+}
+
+.inserirId input {
+    height: 35px;
+    width: 100px;
+    margin-left: 2px;
+    border-radius: 7px ;
+    border: 1px solid #003785;
+}
+
+.inserirId label {
+    margin-right: 10px;
+    color: #003785;
+    font-size: 20px;
+}
+
+.help{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .help img {
-    margin-right: 7px;
+    margin-right: 5px;
+}
+
+.help,
+.exit {
+    text-align: center;
 }
 
 .exit {
     display: flex;
-    width: 100%;
-    align-items: flex-end;
-    flex-direction: column;
-}
-
-.bottom {
-    margin-top: 80%;
-}
-
-
-@media  (min-height: 900px) {
-
-
-    .bottom {
-        margin-top: 75%;
-    }
-    
-}
-
-
-@media (min-height: 400px) and (max-height: 855px) {
-
-
-    .bottom {
-        margin-top: 40%;
-    }
-    
-    .idInput input {
-        width: 100px;
-    }
-
-    .idInput label {
-        margin-bottom: 4%;
-    }
-
-    .idInput a {
-        margin-bottom: 4%;
-    }
-
-   .idInput {
-    display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-   }
-
-   #logo {
-    width:300px;
-    height: 150px;
-   }
+    justify-content: flex-end;
+    
 }
+
+@media (max-width: 768px) {
+    .main-content {
+        width: 80%; 
+        
+    }
+
+ 
+}
+
+
+    
+
 
 
  
