--- a/css/verificar.css
+++ b/css/verificar.css
@@ -93,7 +93,7 @@ body {
 
 }
 
-.help img {
+.help .imagem {
     margin-right: 5px;
 }
 
@@ -115,7 +115,38 @@ body {
         
     }
 
+
  
+}
+
+@media (max-width: 460px) {
+    .main-content {
+        width: 100%;
+    }
+
+
+
+    .top-content {
+
+        width: 60%;
+        display: flex;
+        justify-content:center;
+        
+    }
+}
+
+@media (width: 1280px) and (height: 720px) {
+.imagem {
+    width: 100%;
+    height: auto;
+}
+
+.imagem img {
+    width: 90%;
+    height: auto;
+}
+  
+   
 }
 
 
