--- a/css/verificar.css
+++ b/css/verificar.css
@@ -114,14 +114,12 @@ body {
         width: 80%; 
         
     }
-
-
- 
 }
 
 @media (max-width: 460px) {
     .main-content {
         width: 100%;
+        height: 100%;
     }
 
 
