--- a/css/result.css
+++ b/css/result.css
@@ -39,6 +39,14 @@ body {
 
 }
 
+.tabela {
+    overflow-x: auto; 
+    width: 100%;
+    height: 60%;
+    
+}
+
+
 .selectButtons {
     margin-top: 2%;
     display: flex;
@@ -134,7 +142,7 @@ td {
     padding: 5px;
     text-align: left;
     color: #003785;
-    font-size: 20px;
+    font-size: 13px;
 }
 
 th {
@@ -167,20 +175,37 @@ box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
 
 .btn-close button {
     width: 40px;
+    border: 0px; 
+    background-color: transparent;
+    cursor: pointer;
 }
 
- .msg {
-display: flex;
-align-items: center;
-justify-content: space-between;
+.caixaMsg {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+    width: 100%;
+    overflow: hidden; 
+}
+
+.caixaMsg img {
+    width: 12%;
+    
+}
+
+.msg {
+    display: flex;
+    align-items: center;
+    flex-direction: row; 
+    justify-content: center;
+    width: 100%; 
+    text-align: center; 
 }
 
 dialog.hide {
     opacity: 0;
     pointer-events: none;
-}
-
-dialog.hide {
     top: 0;
 }
 
@@ -188,9 +213,8 @@ dialog {
     transition: 0.5s;
     opacity: 1;
     pointer-events: all;
+    overflow: hidden; 
 }
-
-
 
 
 .help {
@@ -218,7 +242,7 @@ dialog {
     margin-top: 10%;
 }
 
-/*responsividade*/
+
 
 @media (min-width: 930px) and (max-width: 1080px) {
     .tabela {
@@ -347,4 +371,69 @@ td {
  
 
 
+}
+
+
+@media (min-width: 304px) and (max-width: 930px) {
+    .tabela {
+        height: 60%;
+    }
+
+    table,
+    th,
+    td {
+        font-size: 10px;
+    }
+
+    .verificarContent {
+        width: 100%;
+    }
+}
+
+@media (min-height: 500px) and (max-height: 900px) {
+    .tabela {
+        height: 40%;
+    }
+
+    table,
+    th,
+    td {
+        font-size: 20px;
+    }
+
+
+
+    .bottom {
+        margin-top: 5px;
+    }
+
+    .verificarContent {
+        height: 80vh;
+        width: 80vh;
+    }
+}
+
+@media (min-height: 300px) and (max-height: 500px) {
+
+    
+    .tabela {
+        height: 50%;
+    }
+
+    table,
+    th,
+    td {
+        font-size: 6px;
+    }
+
+    .bottom {
+        margin-top: 2px;
+        height: 40px;
+        width: 40px;
+    }
+
+    .verificarContent {
+        height: 100vh;
+        width: 100vh;
+    }
 }
